# betting_api

./: .gitignore  README.md  docker-compose.yml  init.sh
bet-maker/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
bet-maker/app/: config.py  main.py
bet-maker/app/api/: bets.py  events.py
bet-maker/app/db/: database.py
bet-maker/app/models/: bet.py  event.py
bet-maker/app/repositories/: bet_repository.py  event_repository.py
bet-maker/app/schemas/: bet.py  event.py
bet-maker/migration/: env.py
bet-maker/migration/versions/: 3a2c277e2ed4_initial_migration.py
line-provider/: Dockerfile  pyproject.toml  requirements.txt
line-provider/app/: config.py  main.py
line-provider/app/api/: events.py
line-provider/app/repositories/: event_repository.py
