[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["GrigoriyKruchinin <gkruchinin75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
aiohttp = "^3.10.10"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
